Closed Bug 1936928 Opened 2 months ago Closed 1 month ago

Ctrl+Enter shortcut on macOS always targets the center of the screen rather than the focused element

Categories

(Core :: Widget: Cocoa, defect, P3)

defect

Tracking

()

RESOLVED FIXED
136 Branch
Accessibility Severity s3
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox134 --- wontfix
firefox135 --- wontfix
firefox136 --- fixed

People

(Reporter: emilio, Assigned: emilio)

References

(Regressed 1 open bug, Regression)

Details

(Keywords: access, regression)

Attachments

(1 file)

macOS has a shortcut for showing the context menu via keyboard (Ctrl+Enter), but it looks like it targets the middle of the screen rather than the focused element, which is rather broken.

CC'ing some a11y folks because I don't know how severe this is in practice. I'm surprised nobody has noticed.

This makes Ctrl+Enter work as expected to show the context menu.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

(In reply to Emilio Cobos Álvarez (:emilio) from comment #1)

CC'ing some a11y folks because I don't know how severe this is in practice. I'm surprised nobody has noticed.

I'd say no one has noticed because this keyboard shortcut was only added in MacOS 15 Sequoia. For the decades prior, you just couldn't open a context menu with the keyboard unless you used VoiceOver or some other tool.

That also makes it tricky to assess the severity. If this had been MacOS functionality for a while and we never implemented it, it'd absolutely be an s2. However, it's hard to justify this being an s2 when this capability was only just added.

Keywords: access

I tested this for the context menu shortcut a few weeks ago and found we had the same behaviour as safari -- I'll check again to make sure that's still true, but I'm not sure we have control over what happens during this shortcut.

Update: Looks like safari launches the menu in the upper left corner consistently, regardless of focus... I think this is reasonably an S3 considering they're our ~standard for behaviour in most of these macOS cases

Accessibility Severity: --- → s3

The severity field is not set for this bug.
:spohl, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(spohl.mozilla.bugs)
Severity: -- → S3
Flags: needinfo?(spohl.mozilla.bugs)
Priority: -- → P3
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7290a2bc3b32 Handle context menu key down on macOS. r=masayuki,mstange
Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
Regressions: 1945422
Duplicate of this bug: 1945424
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: