Bug 1936928 - Handle context menu key down on macOS. r=masayuki,mstange

This makes Ctrl+Enter work as expected to show the context menu.

Differential Revision: https://phabricator.services.mozilla.com/D232012